WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133177
Text markers don't paint on simple lines
https://bugs.webkit.org/show_bug.cgi?id=133177
Summary
Text markers don't paint on simple lines
Antti Koivisto
Reported
2014-05-22 05:50:48 PDT
Find markers are missing.
Attachments
patch
(7.42 KB, patch)
2014-05-22 05:55 PDT
,
Antti Koivisto
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-05-22 05:55:38 PDT
Created
attachment 231879
[details]
patch
Antti Koivisto
Comment 2
2014-05-22 06:06:21 PDT
https://trac.webkit.org/r169199
Csaba Osztrogonác
Comment 3
2014-05-22 08:38:53 PDT
(In reply to
comment #1
)
> Created an attachment (id=231879) [details] > patch
It broke the Apple Windows build: 1>WebCoreTestSupport.lib(Internals.obj) : error LNK2019: unresolved external symbol "public: void __thiscall WebCore::Editor::setMarkedTextMatchesAreHighlighted(bool)" (?setMarkedTextMatchesAreHighlighted@Editor@WebCore@@QAEX_N@Z) referenced in function "public: void __thiscall WebCore::Internals::setMarkedTextMatchesAreHighlighted(bool,int &)" (?setMarkedTextMatchesAreHighlighted@Internals@WebCore@@QAEX_NAAH@Z) 1>C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V120\Microsoft.CppCommon.targets(607,5): error MSB6006: "link.exe" exited with code 1120. 1>C:\cygwin\home\buildbot\slave\win-release\build\WebKitBuild\Release\bin32\DumpRenderTree.dll : fatal error LNK1120: 1 unresolved externals 1>Done Building Project "C:\cygwin\home\buildbot\slave\win-release\build\Tools\DumpRenderTree\DumpRenderTree.vcxproj\DumpRenderTree\DumpRenderTree.vcxproj" (Build target(s)) -- FAILED.
Csaba Osztrogonác
Comment 4
2014-05-22 22:26:41 PDT
The Windows build is still broken. Are you going to fix it?
Csaba Osztrogonác
Comment 5
2014-05-23 02:22:35 PDT
(In reply to
comment #4
)
> The Windows build is still broken. Are you going to fix it?
http://trac.webkit.org/changeset/169253
fixed the build, thanks.
Tim Horton
Comment 6
2014-05-27 23:59:29 PDT
<
rdar://problem/16911387
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug