Text markers don't paint on simple lines https://bugs.webkit.org/show_bug.cgi?id=133177

Reviewed by Anders Carlsson.

Source/WebCore:

Marker painting code does not yet support simple lines.

Tests: fast/text/mark-matches-rendering-simple-lines.html
       fast/text/mark-matches-rendering.html

* dom/DocumentMarkerController.cpp:
(WebCore::DocumentMarkerController::addMarker):

    Force text blocks with markers to use line boxes.

* testing/Internals.cpp:
(WebCore::Internals::setMarkedTextMatchesAreHighlighted):

    Expose this so we can make reftests for marker rendering.

* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/text/mark-matches-rendering-expected.html: Added.
* fast/text/mark-matches-rendering-simple-lines-expected.html: Added.
* fast/text/mark-matches-rendering-simple-lines.html: Added.
* fast/text/mark-matches-rendering.html: Added.



Canonical link: https://commits.webkit.org/151195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169199 268f45cc-cd09-0410-ab3c-d52691b4dbfc